--- a/example/deno.json
+++ b/example/deno.json
@@ -3,6 +3,7 @@
   "tasks": {
     "esm:add": "deno run -A https://esm.sh/v128 add",
     "esm:update": "deno run -A https://esm.sh/v128 update",
-    "esm:remove": "deno run -A https://esm.sh/v128 remove"
+    "esm:remove": "deno run -A https://esm.sh/v128 remove",
+    "ci:dagger": "dagger run deno run -A dagger-ci.ts"
   }
 }
