--- a/example/.fluentci/deno.json
+++ b/example/.fluentci/deno.json
@@ -3,7 +3,6 @@
   "tasks": {
     "esm:add": "deno run -A https://esm.sh/v128 add",
     "esm:update": "deno run -A https://esm.sh/v128 update",
-    "esm:remove": "deno run -A https://esm.sh/v128 remove",
-    "ci:dagger": "dagger run deno run -A dagger-ci.ts"
+    "esm:remove": "deno run -A https://esm.sh/v128 remove"
   }
 }
