--- a/.github/workflows/example.yml
+++ b/.github/workflows/example.yml
@@ -24,5 +24,7 @@ jobs:
           sudo mv bin/dagger /usr/local/bin
           dagger version
       - name: Run Dagger Pipelines
-        run: dagger run deno run -A ../src/dagger/runner.ts
+        run: |
+          rm ../deno.lock
+          dagger run deno run -A ../src/dagger/runner.ts
         working-directory: example
